# nanocloud

./: .gitignore  Cargo.toml  Makefile  README.md
assets/security/: bindings-default.json  seccomp-baseline.json
docs/: openapi.json  specification.md
docs/checklists/: diagnostics-loopback.md  event-stream-cli.md  observability-logging.md  oci-conformance.md  profile-export.md  security-defaults.md  ssa-apply.md
docs/design/: security-defaults.md
docs/guides/: backups.md  bindings.md  diagnostics.md  observability.md  security.md
docs/schema/: README.md
docs/schema/bundle/: README.md  manifest.json  v1alpha1.json
docs/tests/: oci-conformance.md
packaging/debian/: build.sh  conffiles  nanocloud.default  nanocloud.logrotate  nanocloud.service  postinst  postrm  prerm
src/: lib.rs  main.rs
src/nanocloud/: config.rs  diagnostics.rs  logger.rs  mod.rs  test_support.rs
src/nanocloud/api/: client.rs  schema.rs  types.rs
src/nanocloud/cli/: args.rs  curl.rs  mod.rs  output.rs  setup.rs  terminal.rs
src/nanocloud/cni/: mod.rs  network.rs  provider.rs
src/nanocloud/controller/: bundle.rs  daemonset.rs  delete.rs  deployment.rs  endpoints.rs  mod.rs  networkpolicy.rs  reconcile.rs  replicaset.rs  rollout.rs  runtime.rs  scheduling.rs  snapshot.rs  statefulset.rs  status.rs  watch.rs
src/nanocloud/csi/: driver.rs  mod.rs  provider.rs  types.rs
src/nanocloud/diagnostics/: loopback.rs
src/nanocloud/engine/: bindings.rs  container.rs  image.rs  log.rs  mod.rs  profile.rs  snapshot.rs  streaming.rs
src/nanocloud/events/: bindings.rs  in_memory.rs  mod.rs
src/nanocloud/k8s/: bundle_manager.rs  configmap.rs  configmap_manager.rs  daemonset.rs  deployment.rs  device_manager.rs  discovery.rs  endpoints.rs  event.rs  job.rs  mod.rs  networkpolicy.rs  ownership.rs  persistentvolumeclaim.rs  pod.rs  replicaset.rs  (+5 more)
tests/: oci_conformance.rs
tests/nanocloud/: mod.rs
tools/: openapi_gen.rs  publish_schema.sh
(+128 files in other folders)
