[package]
name = "nanocloud"
version = "0.0.1"
edition = "2021"
description = "A CLI tool for managing your Nanocloud"

[dependencies]
base64 = "0.22.1"
prometheus = "0.14.0"
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
futures-util = "0.3.31"
futures-core = "0.3.31"
axum = { version = "0.8.6", features = ["macros", "ws"] }
utoipa = { version = "5.4.0", features = ["axum_extras"], optional = true }
flate2 = "1.1.4"
fs2 = "0.4.3"
libc = "0.2.177"
nix = { version = "0.30.1", features = ["fs", "hostname", "mount", "process", "sched", "signal", "term", "user"] }
openssl = "0.10.73"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream", "native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
serde_yaml = "0.9.34"
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "net", "signal", "process"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["io"] }
hyper = { version = "1.7.0", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1.17", features = ["server", "http1"] }
tokio-openssl = "0.6.5"
tokio-tungstenite = { version = "0.28.0", features = ["url"] }
qrcode = "0.14.1"
data-encoding = "2.9.0"
log = "0.4.28"
jsonwebtoken = { version = "10.0.0", default-features = false, features = ["rust_crypto", "use_pem"] }
sha1 = "0.10.6"
hex = "0.4.3"
tower = "0.5.2"
rand = "0.8.5"
cron = "0.15.0"
chrono-tz = "0.10.0"

[features]
default = []
openapi = ["dep:utoipa"]

[dev-dependencies]
tempfile = "3.23.0"
serde_urlencoded = "0.7.1"
serial_test = "3.1.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
